@@ -59,6 +59,8 @@
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
         <maven.build.timestamp.format>yyyyMMddHHmmss</maven.build.timestamp.format>
+        <argLine /> <!-- Keep it empty -->
+        <argLine.global>-Xms256m -Xmx2g -XX:+UseConcMarkSweepGC</argLine.global>
 
         <emf.version>2.12.0</emf.version>
         <ecore.version>2.12.0</ecore.version>
@@ -68,7 +70,7 @@
 
         <assertj.version>3.6.2</assertj.version>
         <junit.version>4.12</junit.version>
-        <mockito.version>2.7.4</mockito.version>
+        <mockito.version>2.7.14</mockito.version>
         <guava.version>21.0</guava.version>
         <javax-annotations.version>3.0.1</javax-annotations.version>
         <junit.version>4.12</junit.version>
@@ -153,7 +155,7 @@
 
         <dependency>
             <groupId>org.mockito</groupId>
-            <artifactId>mockito-all</artifactId>
+            <artifactId>mockito-core</artifactId>
             <version>${mockito.version}</version>
             <scope>test</scope>
         </dependency>
@@ -164,9 +166,8 @@
             <version>${assertj.version}</version>
             <scope>test</scope>
         </dependency>
-
-
     </dependencies>
+
     <repositories>
         <repository>
             <id>tomp2p.net</id>
@@ -175,6 +176,7 @@
 
     </repositories>
 
+    <build>
     <resources>
         <resource>
             <directory>${project.basedir}/src/main/resources</directory>
@@ -397,7 +399,7 @@
             </plugin>
         </plugins>
     </pluginManagement>
-</build>
+    </build>
 
 
 <profiles>
